--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
   var stage;
 
-  var projectId = [Your ID Here];
-  var projectTitle = '';
+  var projectId = [116055504];
+  var projectTitle = 'How To Make an App On Scratch By karatebuilderboy';
   var turbo = false;
   var fullScreen = true;
 
